--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "devDependencies": {
+    "axios": "^0.21.1",
     "gh-pages": "^3.2.3",
     "handlebars": "^4.7.7",
+    "notiflix": "^3.0.1",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
