--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "axios": "^0.21.1",
     "gh-pages": "^3.2.3",
     "handlebars": "^4.7.7",
+    "modern-normalize": "^1.1.0",
     "notiflix": "^3.0.1",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "vanilla-back-to-top": "^7.2.1"
   }
 }
