--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8",
+    "tui-pagination": "^3.4.1",
     "vanilla-back-to-top": "^7.2.1"
   }
 }
